<resources>
    <string name="app_name">ChronoGym</string>
    <string name="model_exercise_rest">Descanso</string>
    <string name="model_exercise_prepare">Prepárate</string>
    <string name="activity_any_accept">Aceptar</string>
    <string name="activity_any_deny">Cancelar</string>
    <string name="activity_any_please_input_valid_number">Introduce un número válido</string>
    <string name="activity_main_settings">Configuración</string>
    <string name="activity_main_add">Añadir rutina</string>
    <string name="activity_main_longpress_hint">¿Qué quieres hacer con esa rutina?</string>
    <string name="activity_main_settings_hint">Opciones</string>
    <string name="activity_main_deleteall_title">¿Seguro que quieres borrar todas tus rutinas?</string>
    <string name="activity_main_deleteall_hint">Esta acción es irreversible, le recomendamos que antes exporte sus rutinas</string>
    <string name="activity_main_menu_explore">Explorar rutinas</string>
    <string name="activity_main_menu_import">Importar rutina</string>
    <string name="activity_main_menu_create">Crear rutina</string>
    <string name="activity_main_menu_edit">Editar</string>
    <string name="activity_main_menu_delete">Borrar</string>
    <string name="activity_main_menu_export">Exportar</string>
    <string name="activity_main_settings_export">Exportar todo</string>
    <string name="activity_main_settings_delete">Borrar todo</string>
    <string name="activity_main_error_cant_play_queue">No se puede iniciar la rutina</string>
    <string name="activity_main_delete_success">La rutina ha sido borrada</string>
    <string name="activity_import_text_title">Importar</string>
    <string name="activity_import_text_hint">Selecciona lo que quieras guardar</string>
    <string name="activity_import_clickable_import">Guardar</string>
    <string name="activity_import_clickable_select_all">Seleccionar todo</string>
    <string name="activity_import_dialog_exit_title">¿Seguro que quieres salir?…</string>
    <string name="activity_import_dialog_exit_message">La selección no será guardada…</string>
    <string name="activity_import_dialog_exit_button_confirm">Sí</string>
    <string name="activity_import_dialog_exit_button_deny">No, me gustaría quedarme</string>
    <string name="activity_import_dialog_save_title">¿Seguro que quieres guardarlos?…</string>
    <string name="activity_import_dialog_save_message">Lo que hayas seleccionado será guardado en tu lista de rutinas…</string>
    <string name="activity_import_dialog_save_button_confirm">Sí</string>
    <string name="activity_import_dialog_save_button_deny">No</string>
    <string name="activity_explore_text_title">Explorar</string>
    <string name="activity_explore_text_hint">Encuentra la rutina perfecta</string>
    <string name="activity_explore_error_no_tags_to_add">No hay más etiquetas disponibles</string>
    <string name="activity_explore_clickable_search_all">Buscar todo</string>
    <string name="activity_explore_clickable_search_filtered">Buscar selección</string>
    <string name="activity_explore_text_filter_title_exclusive">Las rutinas deberán ser de</string>
    <string name="activity_explore_text_filter_title_inclusive">…e incluir al menos una de estas características</string>
    <string name="activity_explore_text_filter_hint_all">Añade etiquetas</string>
    <string name="activity_explore_dialog_add_title">Añade una etiqueta</string>
    <string name="activity_explore_dialog_exit_title">¿Seguro que quieres salir?…</string>
    <string name="activity_explore_dialog_exit_message">Tendrás que volver a elegir tus filtros…</string>
    <string name="activity_explore_dialog_exit_button_confirm">Sí</string>
    <string name="activity_explore_dialog_exit_button_deny">No, me gustaría quedarme</string>
    <string name="activity_explore_dialog_help_title">¿Cómo funciona?</string>
    <string name="activity_explore_dialog_help_message">
        <b>BÚSQUEDA</b>\n
        Puedes mostrar todas las rutinas disponibles, o afinar la búsqueda si es que añades alguna etiquetas.\n
        <b>ETIQUETAS</b>\n
        Hay dos tipos, las de búsqueda exclusiva e inclusiva. Las puedes añadir pulsando el botón
        "añadir" de cada sección.\n\n
        <b>ETIQUETAS EXCLUSIVAS</b>\n
        Están en la primera sección. Hace que la búsqueda se limite a mostrar las rutinas con ese
        grupo de etiquetas.\n
        Ejemplo: Buscar rutinas de calistenia = etiqueta "calistenia".\n
        <b>ETIQUETAS INCLUSIVAS</b>\n
        Están en la segunda sección. Afina la búsqueda para que .\n
        Ejemplo: De las rutinas de calistenia, quiero que sean en el suelo = etiqueta "suelo"\n
    </string>
    <string name="activity_explore_dialog_help_accept">Sí</string>
    <string name="activity_exercise_prompt_title_finished">¡Bien hecho!</string>
    <string name="activity_exercise_prompt_message_finished">Has terminado la rutina…</string>
    <string name="activity_exercise_prompt_title_exit">Saliendo…</string>
    <string name="activity_exercise_prompt_message_exit">¿Seguro que quieres salir y terminar el entrenamiento?</string>
    <string name="activity_exercise_prompt_action_exit_accept">Sí</string>
    <string name="activity_exercise_prompt_action_exit_deny">No</string>
    <string name="activity_exercise_button_pause">Pausa</string>
    <string name="activity_exercise_button_prev">Retrasar</string>
    <string name="activity_exercise_button_next">Adelantar</string>
    <string name="activity_exercise_button_return">Volver</string>
    <string name="activity_exercise_error_invalid_intent">El entrenamiento no pudo ser cargado</string>
    <string name="activity_editor_save_new_success">La rutina se ha creado</string>
    <string name="activity_editor_save_overwrite_success">Los cambios han sido guardados</string>
    <string name="activity_editor_page_poses">Poses</string>
    <string name="activity_editor_page_transitions">Transiciones</string>
    <string name="activity_editor_page_transition_poses">Transición</string>
    <string name="activity_editor_page_sets">Series</string>
    <string name="activity_editor_page_exercise_info">Información</string>
    <string name="activity_editor_page_exercise_queue">Entrenamiento</string>
    <string name="activity_editor_section_exercise">Ejercicio</string>
    <string name="activity_editor_section_file">Archivo</string>
    <string name="activity_editor_section_resources">Recursos</string>
    <string name="activity_editor_button_cancel">Cancelar</string>
    <string name="activity_editor_button_modify">Confirmar</string>
    <string name="activity_editor_button_add">Añadir</string>
    <string name="activity_editor_hint_reorder">Arrastra las cartas para cambiar su orden\nPulsa una carta para mostrar el menú de opciones</string>
    <string name="activity_editor_action_name_save">Guardar</string>
    <string name="activity_editor_action_name_help">Ayuda</string>
    <string name="activity_editor_action_name_exit">Salir</string>
    <string name="activity_editor_action_title_help">¿Cómo puedo crear/editar una rutina?</string>
    <string name="activity_editor_action_message_help">
        <b>RESUMEN</b>\n
        1. Crea recursos (poses, series, etc…).\n
        2. Haz referencia a ellos en la lista de reproducción, una o varias veces con el orden que
        tu quieras.\n
        \n
        <b>SECCIONES</b>\n
        Accesibles desde la barra inferior, cada sección está dividida en varias páginas con
        elementos editables:\n
        1. <b>Ejercicio</b> La lista que define que harás en tu rutina. Aparecen los series a
        realizar y el orden lo eliges tú.\n
        2. <b>Archivo</b> Permite editar los datos de la rutina, guardar los cambios y salir.\n
        3. <b>Recursos</b> Aquí se crean los ítems necesarios para formar series.\n
        \n
        <b>RECURSOS</b>\n
        Defínelos una vez y reutilízalos tantas veces como quieras en la sección EJERCICIO:\n
        1. <b>Poses</b> Representan una posición estática durante el entrenamiento. Son
           imprescindibles para cualquier serie, ya sea estática o dinámica.\n
        2. <b>Transición</b> Es una secuencia de poses, que equivale a una repetición. Es necesaria
           para los series dinámicas.\n
        3. <b>Series</b> Son las unidades que se ejecutan durante el entrenamiento. Pueden ser
           descansos, series estáticas o sets dinámicas.\n
        \n
        <b>EJERCICIO</b>\n
        1. Un entrenamiento consiste en una lista de series que se ejecutan en orden.\n
        2. Antes de crear un entrenamiento, necesitas haber definido uno o varios recursos de tipo
           serie.\n
        3. Las series se añaden mediante referencia, lo que permite reutilizar una misma serie, como
           por ejemplo "flexiones", tantas veces como desees en la lista de reproducción.\n
        4. Las series que se añadan, pueden ser reordenadas.
        <b>ARCHIVO</b>\n
        1. En la primera página podrás guardar o salir.\n
        2. La segunda página contiene el nombre e ícono de la rutina. Estos son modificables.
    </string>
    <string name="activity_editor_action_button_help_confirm">Sí</string>
    <string name="activity_editor_action_title_exit">¿Seguro que quieres salir?</string>
    <string name="activity_editor_action_message_exit">Los cambios no guardados se perderán…</string>
    <string name="activity_editor_action_button_exit_confirm">Sí</string>
    <string name="activity_editor_action_button_exit_deny">No, quiero seguir editando</string>
    <string name="activity_editor_action_desc_save">Si la rutina ya existía, se sobrescribirán los datos</string>
    <string name="activity_editor_action_desc_help">¿Quieres aprender a configurar tu rutina? Este es tu sitio</string>
    <string name="activity_editor_action_desc_exit">Los cambios no guardados serán olvidados para siempre…</string>
    <string name="activity_editor_action_title_rename_exercise">Escriba el nombre del ejercicio</string>
    <string name="activity_editor_action_hint_rename_exercise">Nombre del ejercicio</string>
    <string name="activity_editor_action_default_rename_exercise">Nueva rutina</string>
    <string name="activity_editor_action_desc_rename_exercise">Pulsa para cambiar el nombre de la rutina</string>
    <string name="activity_editor_action_title_reiconify_exercise">Ícono</string>
    <string name="activity_editor_action_desc_reiconify_exercise">Pulsa para cambiar el icono de la rutina</string>
    <string name="activity_editor_action_title_tags_exercise">Etiquetas</string>
    <string name="activity_editor_action_desc_tags_exercise">Presiona una etiqueta para añadirla/quitarla de la rutina</string>
    <string name="activity_editor_error_invalid_intent">El editor no pudo abrir el entrenamiento</string>
    <string name="activity_editor_error_invalid_section">No estás en una sección válida</string>
    <string name="activity_editor_error_invalid_transtion_list_id">No se pudieron inspeccionar las poses de dicha transición</string>
    <string name="activity_editor_error_poses_is_empty">No tienes ninguna pose creada</string>
    <string name="activity_editor_error_transitions_is_empty">No tienes ninguna transición creada</string>
    <string name="activity_editor_error_sets_is_empty">No tienes ninguna serie creada</string>
    <string name="activity_editor_error_pose_was_not_found">No se encontró dicha pose</string>
    <string name="activity_editor_error_transition_list_was_not_found">No se encontró dicha lista de transiciones</string>
    <string name="activity_editor_error_set_was_not_found">No se encontró dicha serie</string>
    <string name="activity_editor_error_remove_pose_failed_because_items_depend_on_it">No se pudo eliminar porque está siendo usado en otro recurso</string>
    <string name="activity_editor_error_remove_transition_list_failed_because_items_depend_on_it">No se pudo eliminar porque está siendo usado en otro recurso</string>
</resources>