<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ImportActivity">

    <!-- Contenido principal -->
    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_padding"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/activity_import_text_title"
                    android:textAlignment="center"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_import_text_hint"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonClose"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:contentDescription="@string/activity_main_settings"
                android:visibility="visible"
                app:icon="@drawable/ic_ui_back"
                app:iconSize="32dp"
                app:iconTint="?attr/colorOnSurfaceVariant"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutTitle"
                app:layout_constraintTop_toTopOf="@+id/linearLayoutTitle"
                tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercisesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/activity_padding"
            android:layout_weight="1" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkboxSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_import_clickable_select_all" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:enabled="false"
            android:text="@string/activity_import_clickable_import"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
