<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_padding"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </androidx.viewpager2.widget.ViewPager2>

        <LinearLayout
            android:id="@+id/editionButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_padding"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/buttonEditionCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_editor_button_cancel" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Button
                android:id="@+id/buttonEditionModify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_editor_button_modify" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/activity_editor_button_add" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:visibility="invisible"
            app:ci_drawable="@drawable/dot_indicator_active"
            app:ci_drawable_unselected="@drawable/dot_indicator_inactive"
            tools:visibility="visible">

        </me.relex.circleindicator.CircleIndicator3>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/sections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedButton="@id/sectionExercise"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/sectionExercise"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/activity_editor_section_exercise"
                android:textAllCaps="true"
                android:textSize="8sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_section_exercise"
                app:iconGravity="top"
                app:iconSize="32dp"
                tools:ignore="SmallSp,VisualLintButtonSize" />

            <Button
                android:id="@+id/sectionFile"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_editor_section_file"
                android:textAllCaps="true"
                android:textSize="8sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_section_file"
                app:iconGravity="top"
                app:iconSize="32dp"
                tools:ignore="SmallSp,VisualLintButtonSize" />

            <Button
                android:id="@+id/sectionResources"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_editor_section_resources"
                android:textAllCaps="true"
                android:textSize="8sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_section_resources"
                app:iconGravity="top"
                app:iconSize="32dp"
                tools:ignore="SmallSp,VisualLintButtonSize" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>