<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ExploreActivity">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_padding"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/activity_explore_text_title"
                    android:textAlignment="center"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_explore_text_hint"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonClose"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:visibility="visible"
                app:icon="@drawable/ic_ui_back"
                app:iconSize="32dp"
                app:iconTint="?attr/colorOnSurfaceVariant"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutTitle"
                app:layout_constraintTop_toTopOf="@+id/linearLayoutTitle"
                tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

            <Button
                android:id="@+id/buttonHelp"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-10dp"
                android:visibility="visible"
                app:icon="@drawable/ic_missing"
                app:iconSize="32dp"
                app:iconTint="?attr/colorOnSurfaceVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayoutTitle"
                tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/tag_filter_card_margin"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">

                <LinearLayout
                    android:id="@+id/layoutTagFilterExclusive"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textHintTagFilterExclusive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:autoSizeTextType="uniform"
                        android:maxLines="1"
                        android:text="@string/activity_explore_text_filter_title_exclusive"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/fragmentTagFilterExclusive"
                        android:name="bdisfer1410.gymapp.util.android.TagListFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout="@layout/chip_add" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTagFilterInclusive"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textHintTagFilterInclusive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_padding"
                        android:layout_marginBottom="8dp"
                        android:autoSizeTextType="uniform"
                        android:maxLines="1"
                        android:text="@string/activity_explore_text_filter_title_inclusive"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/fragmentTagFilterInclusive"
                        android:name="bdisfer1410.gymapp.util.android.TagListFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout="@layout/chip_add" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_explore_clickable_search_all"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
